--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   </style>
 </head>
 <body>
-    <h1>CSE Calculator</h1>
+    <h1>CGPA/GPA Calculator</h1>
     <!-- Footer content below the buttons -->
     <div class="footer-container">
       <div class="author-info fade-in">
