--- a/gpa-cse/1sem.html
+++ b/gpa-cse/1sem.html
@@ -277,7 +277,7 @@
         <option value="0">U</option>
       </select>
 
-      <label for="subject-1">Problem Solving and Python Programming :</label>
+      <label for="subject-1">C Programming :</label>
       <select id="subject-1" class="grade" required>
         <option value="" disabled selected>Select Grade</option>
         <option value="10">O</option>
