--- a/gpa-cse/2sem.html
+++ b/gpa-cse/2sem.html
@@ -286,7 +286,7 @@
         <option value="0">U</option>
       </select>
 
-      <label for="subject-1">Programming in C :</label>
+      <label for="subject-1">Python Programming :</label>
       <select id="subject-1" class="grade" required>
         <option value="" disabled selected>Select Grade</option>
         <option value="10">O</option>
