--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <div class="footer-container">
       <div class="author-info fade-in">
         Created by 
-        <a href="https://prajinkumar-portfolio.vercel.app/" target="_blank">Prajin Kumar P - CSE Department</a>
+        <a href="https://prajin-portfolio.vercel.app/" target="_blank">Prajin Kumar P - CSE Department</a>
         <div class="social-icons">
           <a href="https://www.instagram.com/prajin.official/" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://www.linkedin.com/in/prajinkumar19/" target="_blank"><i class="fab fa-linkedin"></i></a>
