--- a/csecgpa.html
+++ b/csecgpa.html
@@ -272,7 +272,7 @@ footer .social-icons a {
     <h1>CGPA Calculator</h1>
     <div class="author-info">
       Created by 
-      <a href="https://prajinkumar-portfolio.vercel.app/" target="_blank">Prajin Kumar P - CSE Department</a>
+      <a href="https://prajin-portfolio.vercel.app/" target="_blank">Prajin Kumar P - CSE Department</a>
       <div class="social-icons">
         <a href="https://www.instagram.com/prajin.official/" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="https://www.linkedin.com/in/prajinkumar19/" target="_blank"><i class="fab fa-linkedin"></i></a>
