--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
         <div class="author-info">
             Created by 
-            <a href="https://prajinkumar-portfolio.vercel.app/" target="_blank">Prajin Kumar P - CSE Department</a>
+            <a href="https://prajin-portfolio.vercel.app/" target="_blank">Prajin Kumar P - CSE Department</a>
           </div>
       </footer>
   </body>
