--- a/csecgpa.html
+++ b/csecgpa.html
@@ -300,7 +300,7 @@ footer .social-icons a {
 
     <div class="author-info">
         Created by 
-        <a href="https://prajinkumar-portfolio.vercel.app/" target="_blank">Prajin Kumar P - CSE Department</a>
+        <a href="https://prajin-portfolio.vercel.app/" target="_blank">Prajin Kumar P - CSE Department</a>
       </div>
   </footer>
 
