--- a/gpa-cse/8sem.html
+++ b/gpa-cse/8sem.html
@@ -274,7 +274,7 @@
   <footer class="footer-container">
     <div class="author-info fade-in">
       Created by 
-      <a href="https://prajinkumar-portfolio.vercel.app/" target="_blank">Prajin Kumar P - CSE Department</a>
+      <a href="https://prajin-portfolio.vercel.app/" target="_blank">Prajin Kumar P - CSE Department</a>
     </div>
   </footer>
   
