--- a/gpa-cse/5sem.html
+++ b/gpa-cse/5sem.html
@@ -7,7 +7,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
-    /* Base Reset */
     * {
       margin: 0;
       padding: 0;
@@ -15,15 +14,15 @@
     }
 
     body {
-  font-family: 'Roboto', sans-serif;
-  background: #121212;
-  color: #fff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 100vh;
-  overflow: auto; /* Allow scrolling */
-}
+      font-family: 'Roboto', sans-serif;
+      background: #121212;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+      overflow: auto;
+    }
 
     h1 {
       font-size: 2.5rem;
@@ -59,17 +58,10 @@
       width: 100%;
       padding: 12px 15px;
       font-size: 1rem;
-      font-weight: 500;
       border: 2px solid #64ffda;
       border-radius: 10px;
       background: #121212;
       color: #fff;
-      outline: none;
-      transition: border-color 0.3s ease;
-    }
-
-    select:focus {
-      border-color: #00e676;
     }
 
     .button-container {
@@ -85,7 +77,6 @@
       font-size: 1rem;
       font-weight: bold;
       cursor: pointer;
-      transition: background 0.3s ease, transform 0.2s ease;
     }
 
     .calculate-btn {
@@ -93,19 +84,9 @@
       color: #121212;
     }
 
-    .calculate-btn:hover {
-      background: #00e676;
-      transform: translateY(-2px);
-    }
-
     .reset-btn {
       background: #ff5252;
       color: #fff;
-    }
-
-    .reset-btn:hover {
-      background: #ff1744;
-      transform: translateY(-2px);
     }
 
     #result {
@@ -116,80 +97,19 @@
       color: #64ffda;
       display: none;
     }
-    .back-button {
-  display: inline-block;
-  padding: 5px 10px;
-  margin-bottom: 20px;
-  font-size: 1rem;
-  font-weight: 500;
-  color: #64ffda;
-  text-decoration: none;
-  border: 2px solid #64ffda;
-  border-radius: 10px;
-  transition: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
-  text-align: center;
-}
-
-.back-button:hover {
-  background-color: #64ffda;
-  color: #121212;
-  transform: translateY(-2px);
-}
-    .footer-container {
-      width: 100%;
-      margin: 20px 0;
-      text-align: center;
-    }
-
-    .footer-container .author-info {
-      margin-top: 10px;
-      color: #64ffda;
-      font-size: 0.9rem;
-    }
-
-    .footer-container .author-info a {
-      color: #64ffda;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s ease;
-    }
-
-    .footer-container .author-info a:hover {
-      color: #00e676;
-    }
-
-    .footer-container .social-icons {
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      margin-top: 10px;
-    }
-
-    .footer-container .social-icons a {
-      color: #64ffda;
-      font-size: 1.5rem;
-      transition: color 0.3s ease;
-    }
-
-    .footer-container .social-icons a:hover {
-      color: #00e676;
-    }
 
     #loading {
-  display: none;
-  text-align: center;
-  margin-top: 20px;
-}
+      display: none;
+      text-align: center;
+      margin-top: 20px;
+    }
 
-#loading img {
-  width: 50px;
-  height: 50px;
-}
-  .error-message {
-    margin-top: 5px;
-    font-weight: bold;
-  }
-
+    .error-message {
+      margin-top: 5px;
+      font-weight: bold;
+      color: red;
+      font-size: 0.9em;
+    }
 
     @keyframes fadeIn {
       from {
@@ -203,233 +123,218 @@
     }
   </style>
 </head>
+
 <body>
-  <h1>GPA Calculator - 5</h1>
-  
-  <!-- Footer content below the heading -->
-  <div class="footer-container">
-    <div class="author-info fade-in">
-      Created by 
-      <a href="https://prajin-portfolio.vercel.app/" target="_blank">Prajin Kumar P - CSE Department</a>
-      <div class="social-icons">
-        <a href="https://www.instagram.com/prajin.official/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/prajinkumar19/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      </div>
+
+<h1>GPA Calculator - Semester 5</h1>
+
+<div class="container">
+  <form id="gpa-form">
+
+    <label>Infosec Immersion :</label>
+    <select class="grade" required>
+      <option value="" disabled selected>Select Grade</option>
+      <option value="10">O</option>
+      <option value="9">A+</option>
+      <option value="8">A</option>
+      <option value="7">B+</option>
+      <option value="6">B</option>
+      <option value="5">C+</option>
+      <option value="4">C</option>
+      <option value="0">U</option>
+    </select>
+
+    <label>Software Engineering and Design :</label>
+    <select class="grade" required>
+      <option value="" disabled selected>Select Grade</option>
+      <option value="10">O</option>
+      <option value="9">A+</option>
+      <option value="8">A</option>
+      <option value="7">B+</option>
+      <option value="6">B</option>
+      <option value="5">C+</option>
+      <option value="4">C</option>
+      <option value="0">U</option>
+    </select>
+
+    <label>Computer Networks and Security Basics :</label>
+    <select class="grade" required>
+      <option value="" disabled selected>Select Grade</option>
+      <option value="10">O</option>
+      <option value="9">A+</option>
+      <option value="8">A</option>
+      <option value="7">B+</option>
+      <option value="6">B</option>
+      <option value="5">C+</option>
+      <option value="4">C</option>
+      <option value="0">U</option>
+    </select>
+
+    <label>Soft Computing and its Applications :</label>
+    <select class="grade" required>
+      <option value="" disabled selected>Select Grade</option>
+      <option value="10">O</option>
+      <option value="9">A+</option>
+      <option value="8">A</option>
+      <option value="7">B+</option>
+      <option value="6">B</option>
+      <option value="5">C+</option>
+      <option value="4">C</option>
+      <option value="0">U</option>
+    </select>
+
+    <label>Fundamentals of Digital Image Processing :</label>
+    <select class="grade" required>
+      <option value="" disabled selected>Select Grade</option>
+      <option value="10">O</option>
+      <option value="9">A+</option>
+      <option value="8">A</option>
+      <option value="7">B+</option>
+      <option value="6">B</option>
+      <option value="5">C+</option>
+      <option value="4">C</option>
+      <option value="0">U</option>
+    </select>
+
+    <label>Introduction to Women and Gender Studies :</label>
+    <select class="grade" required>
+      <option value="" disabled selected>Select Grade</option>
+      <option value="10">O</option>
+      <option value="9">A+</option>
+      <option value="8">A</option>
+      <option value="7">B+</option>
+      <option value="6">B</option>
+      <option value="5">C+</option>
+      <option value="4">C</option>
+      <option value="0">U</option>
+    </select>
+
+    <label>Software Design Methodologies Laboratory :</label>
+    <select class="grade" required>
+      <option value="" disabled selected>Select Grade</option>
+      <option value="10">O</option>
+      <option value="9">A+</option>
+      <option value="8">A</option>
+      <option value="7">B+</option>
+      <option value="6">B</option>
+      <option value="5">C+</option>
+      <option value="4">C</option>
+      <option value="0">U</option>
+    </select>
+
+    <label>Digital Image Processing Laboratory :</label>
+    <select class="grade" required>
+      <option value="" disabled selected>Select Grade</option>
+      <option value="10">O</option>
+      <option value="9">A+</option>
+      <option value="8">A</option>
+      <option value="7">B+</option>
+      <option value="6">B</option>
+      <option value="5">C+</option>
+      <option value="4">C</option>
+      <option value="0">U</option>
+    </select>
+
+    <label>Automation Theory and Compiler Design :</label>
+    <select class="grade" required>
+      <option value="" disabled selected>Select Grade</option>
+      <option value="10">O</option>
+      <option value="9">A+</option>
+      <option value="8">A</option>
+      <option value="7">B+</option>
+      <option value="6">B</option>
+      <option value="5">C+</option>
+      <option value="4">C</option>
+      <option value="0">U</option>
+    </select>
+
+    <label>Machine Learning Techniques :</label>
+    <select class="grade" required>
+      <option value="" disabled selected>Select Grade</option>
+      <option value="10">O</option>
+      <option value="9">A+</option>
+      <option value="8">A</option>
+      <option value="7">B+</option>
+      <option value="6">B</option>
+      <option value="5">C+</option>
+      <option value="4">C</option>
+      <option value="0">U</option>
+    </select>
+
+    <label>UI/UX Design :</label>
+    <select class="grade" required>
+      <option value="" disabled selected>Select Grade</option>
+      <option value="10">O</option>
+      <option value="9">A+</option>
+      <option value="8">A</option>
+      <option value="7">B+</option>
+      <option value="6">B</option>
+      <option value="5">C+</option>
+      <option value="4">C</option>
+      <option value="0">U</option>
+    </select>
+
+    <div class="button-container">
+      <button type="button" class="calculate-btn" id="calculate">Calculate GPA</button>
+      <button type="reset" class="reset-btn">Reset</button>
     </div>
-  </div>
-  <a href="gpamain.html" class="back-button fade-in">Back to Main Page 👈🏻</a>
-  
-  <div class="container">
-    <form id="gpa-form">
-      <label for="subject-1">Software Engineering and Design :</label>
-      <select id="subject-1" class="grade" required>
-        <option value="" disabled selected>Select Grade</option>
-        <option value="10">O</option>
-        <option value="9">A+</option>
-        <option value="8">A</option>
-        <option value="7">B+</option>
-        <option value="6">B</option>
-        <option value="5">C+</option>
-        <option value="4">C</option>
-        <option value="0">U</option>
-      </select>
 
-      <label for="subject-2">Theoretical Computation and Compiler Design :</label>
-      <select id="subject-2" class="grade" required>
-        <option value="" disabled selected>Select Grade</option>
-        <option value="10">O</option>
-        <option value="9">A+</option>
-        <option value="8">A</option>
-        <option value="7">B+</option>
-        <option value="6">B</option>
-        <option value="5">C+</option>
-        <option value="4">C</option>
-        <option value="0">U</option>
-      </select>
+  </form>
 
-      <label for="subject-3">Operating Systems :</label>
-      <select id="subject-3" class="grade" required>
-        <option value="" disabled selected>Select Grade</option>
-        <option value="10">O</option>
-        <option value="9">A+</option>
-        <option value="8">A</option>
-        <option value="7">B+</option>
-        <option value="6">B</option>
-        <option value="5">C+</option>
-        <option value="4">C</option>
-        <option value="0">U</option>
-      </select>
+  <div id="loading">Calculating...</div>
+  <div id="result"></div>
+</div>
 
-      <label for="subject-4">Fundamentals of Digital Image Processing :</label>
-      <select id="subject-4" class="grade" required>
-        <option value="" disabled selected>Select Grade</option>
-        <option value="10">O</option>
-        <option value="9">A+</option>
-        <option value="8">A</option>
-        <option value="7">B+</option>
-        <option value="6">B</option>
-        <option value="5">C+</option>
-        <option value="4">C</option>
-        <option value="0">U</option>
-      </select>
+<script>
+  const form = document.getElementById("gpa-form");
+  const resultDiv = document.getElementById("result");
+  const loadingDiv = document.getElementById("loading");
 
-      <label for="subject-5">Soft Computing and its Applications :</label>
-      <select id="subject-5" class="grade" required>
-        <option value="" disabled selected>Select Grade</option>
-        <option value="10">O</option>
-        <option value="9">A+</option>
-        <option value="8">A</option>
-        <option value="7">B+</option>
-        <option value="6">B</option>
-        <option value="5">C+</option>
-        <option value="4">C</option>
-        <option value="0">U</option>
-      </select>
+  // FINAL CREDIT ARRAY (MATCHES MARKSHEET)
+  const creditArray = [2, 3, 3, 3, 3, 0, 2, 2, 3, 2, 3];
 
-      <label for="subject-6">Software Design Methodologies Laboratory :</label>
-      <select id="subject-6" class="grade" required>
-        <option value="" disabled selected>Select Grade</option>
-        <option value="10">O</option>
-        <option value="9">A+</option>
-        <option value="8">A</option>
-        <option value="7">B+</option>
-        <option value="6">B</option>
-        <option value="5">C+</option>
-        <option value="4">C</option>
-        <option value="0">U</option>
-      </select>
+  document.getElementById("calculate").addEventListener("click", function () {
+    loadingDiv.style.display = "block";
 
-      <label for="subject-7">Digital Image Processing Laboratory :</label>
-      <select id="subject-7" class="grade" required>
-        <option value="" disabled selected>Select Grade</option>
-        <option value="10">O</option>
-        <option value="9">A+</option>
-        <option value="8">A</option>
-        <option value="7">B+</option>
-        <option value="6">B</option>
-        <option value="5">C+</option>
-        <option value="4">C</option>
-        <option value="0">U</option>
-      </select>
+    const gradeElements = document.querySelectorAll(".grade");
+    let totalCredits = 0;
+    let totalPoints = 0;
+    let allSelected = true;
 
-      <label for="subject-8">Professional Elective-I :</label>
-      <select id="subject-8" class="grade" required>
-        <option value="" disabled selected>Select Grade</option>
-        <option value="10">O</option>
-        <option value="9">A+</option>
-        <option value="8">A</option>
-        <option value="7">B+</option>
-        <option value="6">B</option>
-        <option value="5">C+</option>
-        <option value="4">C</option>
-        <option value="0">U</option>
-      </select>
+    document.querySelectorAll(".error-message").forEach(e => e.remove());
 
-      <label for="subject-9">Mandatory Course I :</label>
-      <select id="subject-9" class="grade" required>
-        <option value="" disabled selected>Select Grade</option>
-        <option value="10">O</option>
-        <option value="9">A+</option>
-        <option value="8">A</option>
-        <option value="7">B+</option>
-        <option value="6">B</option>
-        <option value="5">C+</option>
-        <option value="4">C</option>
-        <option value="0">U</option>
-      </select>
-
-      <div class="button-container">
-        <button type="button" class="calculate-btn" id="calculate">Calculate GPA</button>
-        <button type="reset" class="reset-btn">Reset</button>
-      </div>
-    </form>
-    <div id="loading">
-      <img src="https://i.gifer.com/ZZ5H.gif" alt="Loading...">
-    </div>
-    <div id="result"></div>
-  </div>
-  
-
-  <!-- Footer at the bottom of the page -->
-  <footer class="footer-container">
-    <div class="author-info fade-in">
-      Created by 
-      <a href="https://prajin-portfolio.vercel.app/" target="_blank">Prajin Kumar P - CSE Department</a>
-    </div>
-  </footer>
-  
-  <script>
-    const form = document.getElementById("gpa-form");
-    const resultDiv = document.getElementById("result");
-    const loadingDiv = document.getElementById("loading");
-    const creditArray = [3, 3, 3, 3, 3, 2, 2, 3, 0]; // Credits for each subject
-  
-    document.getElementById("calculate").addEventListener("click", function () {
-      loadingDiv.style.display = "block"; // Show loading spinner
-  
-      // Retrieve all grade select elements
-      const gradeElements = document.querySelectorAll(".grade");
-      let totalCredits = 0;
-      let totalPoints = 0;
-      let allSelected = true;
-  
-      // Remove previous error messages
-      document.querySelectorAll(".error-message").forEach((error) => error.remove());
-  
-      // Check for unselected fields and calculate total points and credits
-      gradeElements.forEach((select, index) => {
-        const grade = parseInt(select.value);
-        if (isNaN(grade)) {
-          allSelected = false; // Flag if any grade is not selected
-          select.style.borderColor = "red"; // Highlight the unselected field
-  
-          // Display an inline error message
-          const errorMessage = document.createElement("div");
-          errorMessage.textContent = `Please select a grade for subject ${index + 1}`;
-          errorMessage.style.color = "red";
-          errorMessage.style.fontSize = "0.9em";
-          errorMessage.classList.add("error-message");
-          select.parentElement.appendChild(errorMessage);
-  
-          loadingDiv.style.display = "none"; // Hide loading spinner
-        } else {
-          select.style.borderColor = "#64ffda"; // Reset the border color if valid
-          totalCredits += creditArray[index];
-          totalPoints += grade * creditArray[index];
-        }
-      });
-  
-      // Stop calculation if not all fields are filled
-      if (!allSelected) {
-        return;
+    gradeElements.forEach((select, index) => {
+      const grade = parseInt(select.value);
+      if (isNaN(grade)) {
+        allSelected = false;
+        const error = document.createElement("div");
+        error.textContent = "Please select a grade";
+        error.className = "error-message";
+        select.parentElement.appendChild(error);
+        loadingDiv.style.display = "none";
+      } else {
+        totalCredits += creditArray[index];
+        totalPoints += grade * creditArray[index];
       }
-  
-      // Calculate GPA
-      const gpa = totalPoints / totalCredits;
-  
-      // Display the result after a short delay
-      setTimeout(function () {
-        resultDiv.textContent = `Your GPA is: ${gpa.toFixed(2)}`;
-        resultDiv.style.display = "block";
-        resultDiv.style.animation = "fadeIn 0.5s ease-out";
-        loadingDiv.style.display = "none"; // Hide loading spinner
-        resultDiv.scrollIntoView({ behavior: "smooth" }); // Smooth scroll to result
-      }, 500);
     });
-  
-    // Reset GPA result and loading indicator on form reset
-    form.addEventListener("reset", function () {
-      resultDiv.style.display = "none";
+
+    if (!allSelected) return;
+
+    const gpa = totalPoints / totalCredits;
+
+    setTimeout(() => {
+      resultDiv.textContent = `Your GPA is: ${gpa.toFixed(2)}`;
+      resultDiv.style.display = "block";
       loadingDiv.style.display = "none";
-  
-      document.querySelectorAll(".grade").forEach((select) => {
-        select.style.borderColor = "#64ffda"; // Reset border color
-      });
-  
-      // Remove error messages
-      document.querySelectorAll(".error-message").forEach((error) => error.remove());
-    });
-  </script>
-  
+    }, 500);
+  });
+
+  form.addEventListener("reset", () => {
+    resultDiv.style.display = "none";
+    loadingDiv.style.display = "none";
+    document.querySelectorAll(".error-message").forEach(e => e.remove());
+  });
+</script>
+
 </body>
 </html>
